sunday evening march10- added self similarities

--- a/index.Rmd
+++ b/index.Rmd
@@ -76,7 +76,7 @@ It might be that the dataset I created, happened to only include unusually fast 
 This graph shows us that my dataset does not consist of outlier recordings of HHTM, as the popularity of all different tempos of HHTM recordings relates well to the same tempo OTHGY recordings. Further more this graph tells us that there is a definite sweet spot in tempo, where the recordings are more popular. This occurs for both How High The Moon and Ornithology around 115BPM. At a slower tempo of 80BPM another spike in popularity is seen, telling us that this song, in both titles, is also enjoyed at a slower tempo. What is interesting to see is that eve though the original recording was titled Ornithology, the How high the Moon recordings seem to be more popular overal. Another thing we can easily see from this graph is that the three extremely fast recordings of how High The Moon are definately outliers in my dataset.
 
 
-### similarity matrix and relation between hhtm and ornithology..
+### similarity matrix and relation between most pupular hhtm and ornithology..
 
 ```{r}
 
@@ -87,11 +87,11 @@ This graph shows us that my dataset does not consist of outlier recordings of HH
 otemp <- '6A1mh31895sUIYEpOfeqC3'
 htemp <- '5ldNRCiBHlFlBlvJmDMlCn'
 orni_maxPop <- 
-    get_tidy_audio_analysis('5S94PIQplSfBHZXsZowyGY') %>% 
+    get_tidy_audio_analysis('6A1mh31895sUIYEpOfeqC3') %>% 
     select(segments) %>% unnest(segments) %>% 
     select(start, duration, pitches)
 hhtm_maxPop <- 
-    get_tidy_audio_analysis('5QN27OeUkJuQX09TEvn48H') %>% 
+    get_tidy_audio_analysis('5ldNRCiBHlFlBlvJmDMlCn') %>% 
     select(segments) %>% unnest(segments) %>% 
     select(start, duration, pitches)
 
@@ -133,10 +133,234 @@ maria
 ```
 
 ***
-
 As you can see these recordings dont seem to be very similar pitch wise according to this similarity matrix...
 
-I have to think about why this is. I also still want to create a couple of other matrices. This one is for maximum popularity orni vs hhtm. I also want to make the same matrix but then with the least popular two titles. That way i can aybe see what structure wise makes them popular (or not). Also, I want to create the same matrices for timbre. 
-Last but not leat I also want to redo all the above, but with self similarity matrices.
+What you can see is the diagonal blue line. This shows that even though the rest is quite different from each other, they do share a common theme througout pretty much the whole song. Lucky for us, seeing this is actually the same song. Actually a matrix like this is pretty much what I was expecting to see. In a jazz standard like this, most of the music is imporovised. Orfcouse the main theme reoccurs a couple of times, which in this atrix are the smaller blue lines to the side of the main diagonal one. 
+
+### similarity matrix and relation between least pupular hhtm and ornithology..
+
+```{r}
+orni_leastPop <- 
+    get_tidy_audio_analysis('67w8T3Nc4cKMafCY5d5SM0') %>% 
+    select(segments) %>% unnest(segments) %>% 
+    select(start, duration, pitches)
+hhtm_leastPop <- 
+    get_tidy_audio_analysis('1hMXLfD50drubEvv5xuDO4') %>% 
+    select(segments) %>% unnest(segments) %>% 
+    select(start, duration, pitches)
+
+song_dist <- 
+    compmus_long_distance(
+    orni_leastPop %>% mutate(pitches = map(pitches, compmus_normalise, 'manhattan')),
+    hhtm_leastPop %>% mutate(pitches = map(pitches, compmus_normalise, 'manhattan')),
+    feature = pitches,
+    method = 'aitchison')
+```
+
+```{r}
+maria_2 <- 
+    song_dist %>% 
+    mutate(
+        orni_leastPop = xstart + xduration / 2, 
+        hhtm_leastPop = ystart + yduration / 2) %>% 
+    ggplot(
+        aes(
+            x = orni_leastPop,
+            y = hhtm_leastPop,
+            fill = d)) + 
+    geom_tile(aes(width = xduration, height = yduration)) +
+    coord_fixed() +
+    scale_x_continuous(
+
+
+        ) +
+    scale_y_continuous(
+
+  
+        ) +
+    scale_fill_viridis_c(option = 'E', guide = "none") +
+    theme_classic() + 
+    theme(axis.text.x = element_text(angle = 30, hjust = 1)) +
+    labs(x = 'Ornithologys', y = 'How high the moon')
+# ggsave('maria.png', maria, width = 13, height = 8, dpi = 'retina')
+maria_2
+```
+
+***
+I am not quite sure what it is I am (not) able to read from this matrix. To me this would mean no kind of similar audio whatsowever. I will need to ask for some insights during the next lecture.
+For my peerreviewers, if you happen to be able to see what is going on here, that would be much apreciated. 
+
+One thinng that I could conclude from this, is that the reason for these two recordings beeing least popular might be because of the fact that they have no clear structure and no clear reacurring 'theme'. 
+
+### Ornithology: self-similarity matrices for pitch and chroma.
+
+```{r}
+orniSS <- 
+    get_tidy_audio_analysis('6A1mh31895sUIYEpOfeqC3') %>%
+    compmus_align(bars, segments) %>% 
+    select(bars) %>% unnest(bars) %>% 
+    mutate(
+        pitches = 
+            map(segments, 
+                compmus_summarise, pitches, 
+                method = 'acentre', norm = 'manhattan')) %>% 
+    mutate(
+        timbre = 
+            map(segments, 
+                compmus_summarise, timbre, 
+                method = 'mean'))
+bztplot <- 
+    bind_rows(
+        orniSS %>% compmus_self_similarity(pitches, 'aitchison') %>% mutate(d = d / max(d), type = "Chroma"),
+        orniSS %>% compmus_self_similarity(timbre, 'euclidean') %>% mutate(d = d / max(d), type = "Timbre")) %>% 
+    ggplot(
+        aes(
+            x = xstart + xduration / 2, 
+            width = xduration,
+            y = ystart + yduration / 2,
+            height = yduration,
+            fill = d)) + 
+    geom_tile() +
+    coord_fixed() +
+    facet_wrap(~ type) +
+    scale_fill_viridis_c(option = 'E', guide = 'none') +
+    theme_classic() +
+    labs(x = '', y = '')
+ggplotly(bztplot)
+```
+
+***
+In these two matrices you can see that there is definately a structure within the complex improvisation. It is not per see any reacurring patterns which make me conclude this - the whole point of improvisation being that you play around with tempo, pitch and timbre - but it is the clear 'new' unplayed parts. The yellow lines mean that from there on a new part of the standard is played. So even though the musician is doing all kinds of complicated improvisation, the structure of the standard is clearly followed.
+
+
+### How high the moon: self-similarity matrices for pitch and chroma.
+
+```{r}
+hhtmSS <- 
+    get_tidy_audio_analysis('5ldNRCiBHlFlBlvJmDMlCn') %>%
+    compmus_align(bars, segments) %>% 
+    select(bars) %>% unnest(bars) %>% 
+    mutate(
+        pitches = 
+            map(segments, 
+                compmus_summarise, pitches, 
+                method = 'acentre', norm = 'manhattan')) %>% 
+    mutate(
+        timbre = 
+            map(segments, 
+                compmus_summarise, timbre, 
+                method = 'mean'))
+bztplot <- 
+    bind_rows(
+        hhtmSS %>% compmus_self_similarity(pitches, 'aitchison') %>% mutate(d = d / max(d), type = "Chroma"),
+        hhtmSS %>% compmus_self_similarity(timbre, 'euclidean') %>% mutate(d = d / max(d), type = "Timbre")) %>% 
+    ggplot(
+        aes(
+            x = xstart + xduration / 2, 
+            width = xduration,
+            y = ystart + yduration / 2,
+            height = yduration,
+            fill = d)) + 
+    geom_tile() +
+    coord_fixed() +
+    facet_wrap(~ type) +
+    scale_fill_viridis_c(option = 'E', guide = 'none') +
+    theme_classic() +
+    labs(x = '', y = '')
+ggplotly(bztplot)
+```
+
+***
+The pitch matrix does nog give us very conclusive information, other than that there is a vague structure, with a lot of imporovisation. In the timbre matrix we can see the section of the standard where the improvisation occured more clearly. This is the yellow part. So it starts out with a clear(ish) theme, then does a lot of improvisation and ends with the theme again. The second time the theme is played, it is not a complete duplicate of the first time, it does still seem to have some nice improvisational quality to it. A structure like this seems very plausible to me in jazz.  
+
+
+### Tonal Templates
+
+The focus of the readings this week were chord and key estimation. One set of standard templates is below: 1--0 coding for the chord templates and the Krumhansl--Kessler key profiles. 
+
+```{r}
+circshift <- function(v, n) {if (n == 0) v else c(tail(v, n), head(v, -n))}
+                                    
+    # C     C#    D     Eb    E     F     F#    G     Ab    A     Bb    B 
+major_chord <- 
+    c(1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    0,    0)
+minor_chord <- 
+    c(1,    0,    0,    1,    0,    0,    0,    1,    0,    0,    0,    0)
+seventh_chord <- 
+    c(1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    1,    0)
+
+major_key <- 
+    c(6.35, 2.23, 3.48, 2.33, 4.38, 4.09, 2.52, 5.19, 2.39, 3.66, 2.29, 2.88)
+minor_key <-
+    c(6.33, 2.68, 3.52, 5.38, 2.60, 3.53, 2.54, 4.75, 3.98, 2.69, 3.34, 3.17)
+
+chord_templates <-
+    tribble(
+        ~name  , ~template,
+        'Gb:7'  , circshift(seventh_chord,  6),
+        'Gb:maj', circshift(major_chord,    6),
+        'Bb:min', circshift(minor_chord,   10),
+        'Db:maj', circshift(major_chord,    1),
+        'F:min' , circshift(minor_chord,    5),
+        'Ab:7'  , circshift(seventh_chord,  8),
+        'Ab:maj', circshift(major_chord,    8),
+        'C:min' , circshift(minor_chord,    0),
+        'Eb:7'  , circshift(seventh_chord,  3),
+        'Eb:maj', circshift(major_chord,    3),
+        'G:min' , circshift(minor_chord,    7),
+        'Bb:7'  , circshift(seventh_chord, 10),
+        'Bb:maj', circshift(major_chord,   10),
+        'D:min' , circshift(minor_chord,    2),
+        'F:7'   , circshift(seventh_chord,  5),
+        'F:maj' , circshift(major_chord,    5),
+        'A:min' , circshift(minor_chord,    9),
+        'C:7'   , circshift(seventh_chord,  0),
+        'C:maj' , circshift(major_chord,    0),
+        'E:min' , circshift(minor_chord,    4),
+        'G:7'   , circshift(seventh_chord,  7),
+        'G:maj' , circshift(major_chord,    7),
+        'B:min' , circshift(minor_chord,   11),
+        'D:7'   , circshift(seventh_chord,  2),
+        'D:maj' , circshift(major_chord,    2),
+        'F#:min', circshift(minor_chord,    6),
+        'A:7'   , circshift(seventh_chord,  9),
+        'A:maj' , circshift(major_chord,    9),
+        'C#:min', circshift(minor_chord,    1),
+        'E:7'   , circshift(seventh_chord,  4),
+        'E:maj' , circshift(major_chord,    4),
+        'G#:min', circshift(minor_chord,    8),
+        'B:7'   , circshift(seventh_chord, 11),
+        'B:maj' , circshift(major_chord,   11),
+        'D#:min', circshift(minor_chord,    3),
+)
+
+key_templates <-
+    tribble(
+        ~name    , ~template,
+        'Gb:maj', circshift(major_key,  6),
+        'Bb:min', circshift(minor_key, 10),
+        'Db:maj', circshift(major_key,  1),
+        'F:min' , circshift(minor_key,  5),
+        'Ab:maj', circshift(major_key,  8),
+        'C:min' , circshift(minor_key,  0),
+        'Eb:maj', circshift(major_key,  3),
+        'G:min' , circshift(minor_key,  7),
+        'Bb:maj', circshift(major_key, 10),
+        'D:min' , circshift(minor_key,  2),
+        'F:maj' , circshift(major_key,  5),
+        'A:min' , circshift(minor_key,  9),
+        'C:maj' , circshift(major_key,  0),
+        'E:min' , circshift(minor_key,  4),
+        'G:maj' , circshift(major_key,  7),
+        'B:min' , circshift(minor_key, 11),
+        'D:maj' , circshift(major_key,  2),
+        'F#:min', circshift(minor_key,  6),
+        'A:maj' , circshift(major_key,  9),
+        'C#:min', circshift(minor_key,  1),
+        'E:maj' , circshift(major_key,  4),
+        'G#:min', circshift(minor_key,  8),
+        'B:maj' , circshift(major_key, 11),
+        'D#:min', circshift(minor_key,  3))
+```
 
 
